clusters/production/platform/hubble/ingress.yaml
# IngressRoute + cert-manager Certificate for the Hubble UI.
# The hubble-ui Service is created by the Talos Cilium install in the
# kube-system namespace.
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.nxua.dev`)
      kind: Rule
      middlewares:
        - name: cloudflare-jwt-assertion
          namespace: traefik
      services:
        - name: hubble-ui
          port: 80
          scheme: http
  tls:
    secretName: hubble-ui-tls
